archive/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bozo-book-library-ingress
  namespace: bozo-book-library-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "bozo-letsencrypt-issuer-dev"
spec:
  tls:
    - hosts:
      - bozobooks.com
      secretName: bozo-letsencrypt-issuer-dev
  rules:
  - host: bozobooks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  book-library-ui-svc
            port:
              number: 3000
      - path: /bookinfo
        pathType: Prefix
        backend:
          service:
            name:  book-info-service-svc
            port:
              number: 8080
      - path: /booklib
        pathType: Prefix
        backend:
          service:
            name:  book-library-service-svc
            port:
              number: 8080
